Use Java 25 Math.clamp for stream storage bounds